--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SimpleScanner</string>
+    <string name="simple_activity_sample">SimpleScanner</string>
 </resources>
